# khiorules

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: KRDRPredictorRule.cpp  KRDRPredictorRule.h  KRLearningProblem.cpp  KRLearningProblem.h  KRLearningProblemView.cpp  KRLearningProblemView.h  KRLearningProject.cpp  KRLearningProject.h  KRMain.cpp  KRMain.h  KRModelingSpec.cpp  KRModelingSpec.dd  KRModelingSpec.h  KRModelingSpecView.cpp  KRModelingSpecView.h  KRObjectCounters.cpp  KRObjectCounters.h  KRPredictorRule.cpp  KRPredictorRule.h  KRPredictorRuleView.cpp  KRPredictorRuleView.h  KRPreprocessedAttribute.cpp  KRPreprocessedAttribute.h  KRRule.cpp  KRRule.h  KRRuleCosts.cpp  KRRuleCosts.h  KRRuleOptimizer.cpp  KRRuleOptimizer.h  KRRuleParameters.cpp  KRRuleParameters.h  KRRuleParametersView.cpp  KRRuleParametersView.h  KRSelectionParameters.cpp  KRSelectionParameters.h  KRSelectionParametersView.cpp  KRSelectionParametersView.h  KRTrainParameters.cpp  KRTrainParameters.h  KRTrainParametersView.cpp  (+4 more)
